 help_crack CHANGELOG
----------------------

ver 0.5 / 9 Nov 2011
 * fix oclHashcat-plus execution on 32bit win
 * make possible to run multiple times
   from the same dir with different crack tools
 * renice(10) when using CPU crackers
 * possibility to show changelog on update

ver 0.5.1 / 10 Nov 2011
 * fix priority setting

ver 0.5.2 / 18 Nov 2011
 * fix oclHashcat-plus support. Thanks to Michael Sprecher

ver 0.6 / 26 Nov 2011
 * upgrade for the new API
 * remove functionality to use your own dicts
 * remove dead code

ver 0.7 / 29 Dec 2011
 * upgrade for the new API (again)
 * added bssid filter again
 * some pylint fixes

ver 0.7.1 / 1 Feb 2012
 * repeat last job if stopped prematurely
 * general and pylint fixes

ver 0.7.2 / 10 Feb 2012
 * do not exit on bad response, it may be a temp problem

ver 0.7.3 / 12 Mar 2012
 * fix search for oclHashcat-plus binaries on unix
 * return right result when get_work_wl() fails

ver 
 * better handling of return codes in oclHashcat-plus