@@ -37,3 +37,4 @@ ver 0.7.3 / 12 Mar 2012
 
 ver 
  * better handling of return codes in oclHashcat-plus
+ * try to run Hashcat* to check if they work (OpenCL/CUDA)
